# Stacksplain

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: test.yml
stacksplain/: cli.py  explainer.py
tests/: test_cli.py  test_explainer.py
